--- a/ToolHead/ToolHead.vcxproj
+++ b/ToolHead/ToolHead.vcxproj
@@ -48,10 +48,10 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>K:\Arduino\1.6.2\libraries\Stepper\src;K:\Arduino\1.6.2\libraries;K:\Arduino\1.6.2\hardware\arduino\avr\libraries;C:\Users\kevinw\Documents\Arduino\libraries;K:\Arduino\1.6.2\hardware\arduino\avr\cores\arduino;K:\Arduino\1.6.2\hardware\arduino\avr\variants\eightanaloginputs;$(ProjectDir)..\ToolHead;K:\Arduino\1.6.2\hardware\tools\avr\avr\include\;K:\Arduino\1.6.2\hardware\tools\avr\avr\include\avr\;K:\Arduino\1.6.2\hardware\tools\avr\lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>K:\Arduino\1.6.2\libraries\Stepper\src;K:\Arduino\arduino-1.8.2\libraries\Stepper\src;K:\Arduino\arduino-1.8.2\libraries;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\libraries;C:\Users\kevinw\Documents\Arduino\libraries;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\cores\arduino;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\variants\eightanaloginputs;$(ProjectDir)..\ToolHead;K:\Arduino\arduino-1.8.2\hardware\tools\avr\avr\include\;K:\Arduino\arduino-1.8.2\hardware\tools\avr\avr\include\avr\;K:\Arduino\arduino-1.8.2\hardware\tools\avr\lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>$(ProjectDir)__vm\.ToolHead.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
-      <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=10605;ARDUINO_AVR_PRO;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=10802;ARDUINO_AVR_PRO;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
