--- a/ToolHead/ToolHead.vcxproj
+++ b/ToolHead/ToolHead.vcxproj
@@ -64,7 +64,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>K:\Arduino\arduino-1.8.2\libraries;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\libraries;C:\Users\kevinw\Documents\Arduino\libraries;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\cores\arduino;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\variants\mega;$(ProjectDir)..\ToolHead;K:\Arduino\arduino-1.8.2\hardware\tools\avr\avr\include\;K:\Arduino\arduino-1.8.2\hardware\tools\avr\avr\include\avr\;K:\Arduino\arduino-1.8.2\hardware\tools\avr\lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>K:\Arduino\arduino-1.8.2\hardware\arduino\avr\libraries\EEPROM\src;K:\Arduino\arduino-1.8.2\libraries;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\libraries;C:\Users\kevinw\Documents\Arduino\libraries;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\cores\arduino;K:\Arduino\arduino-1.8.2\hardware\arduino\avr\variants\mega;$(ProjectDir)..\ToolHead;K:\Arduino\arduino-1.8.2\hardware\tools\avr\avr\include\;K:\Arduino\arduino-1.8.2\hardware\tools\avr\avr\include\avr\;K:\Arduino\arduino-1.8.2\hardware\tools\avr\lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>$(ProjectDir)__vm\.ToolHead.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <PreprocessorDefinitions>__AVR_ATmega2560__;F_CPU=16000000L;ARDUINO=10802;ARDUINO_AVR_MEGA2560;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
