--- a/SSLLetsEncrypt/WebApplication1/src/LagoVista.Net.LetsEncrypt/LagoVista.Net.LetsEncrypt.csproj
+++ b/SSLLetsEncrypt/WebApplication1/src/LagoVista.Net.LetsEncrypt/LagoVista.Net.LetsEncrypt.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Certes" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.3" />
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="2.2.1-preview" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.5.0" />
   </ItemGroup>
 
